fix:format address

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://t.me/theRollerCoasterBot/RollerCoaster",
-  "name": "Welcome to RollerCoaster",
-  "iconUrl": "https://tonrollercoaster.com/logo.png"
+  "url": "https://t.me/theGMCoinBot/GMExchange",
+  "name": "GM Exchange",
+  "iconUrl": "https://gmking.io/logo.png"
 }
